--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <!-- Enlaces de navegación (anchor) -->
             <div class="nav-left">
                 <a href="index.html">Home</a>
-                <a href="formulario/formulario.html">Cargar alumno</a>
-                <a href="tabla/tabla.html">Alumnos</a>
+                <a href="formulario/formulario.html">Cargar Libro</a>
+                <a href="tabla/tabla.html">Géneros</a>
             </div>
             <div class="nav-right">
                 <a href="login/login.html" class="btn-login-link">Login</a>
@@ -24,21 +24,19 @@
     </header>
 
     <main id="home" class="container"> <!-- Contenido principal -->
-        <h1 id="titulo-principal">Carreras</h1> <!-- Título principal -->
-        <p id="parrafo-intro">Carreras del departamento de sistemas</p> <!-- Párrafo -->
+        <h1 id="titulo-principal">Tracker</h1> <!-- Título principal -->
+        <p id="parrafo-intro">Tracker de Lectura</p> <!-- Párrafo -->
 
         <section aria-labelledby="cards-heading"> <!-- Sección agrupada con nombre accesible para el elemento -->
-            <h2 id="cards-heading">Lista de carreras</h2> <!-- Título secundario -->
+            <h2 id="cards-heading">Géneros</h2> <!-- Título secundario -->
             <div class="cards"> <!-- Contenedor flexible -->
                 <article class="card"> <!-- Cada card es un artículo -->
-                    <img src="https://picsum.photos/id/10/480/240" alt="Imagen Lorem picsum" class="card__img" />
+                    <img src="fantasia.jpeg" alt="Imagen Lorem picsum" class="card__img" />
                     <div class="card__body"> <!-- Contenido de la card -->
-                        <h3 class="card__title">Ingeniería en Sistemas</h3>
-                        <p class="card__text">El Ingeniero en Sistemas egresado de la Universidad CAECE posee una sólida
-                            formación en ciencias básicas de la ingeniería, sistemas informáticos, algoritmos y
-                            programación y sistemas de organización de datos...
+                        <h3 class="card__title">Ciencia Ficción</h3>
+                        <p class="card__text">Generalmente llamado "fantasía" se caracteriza por...
                         </p>
-                        <a href="#modal-demo" class="button">Abrir modal</a> <!-- Botón que abre el modal -->
+                        <a href="#modal-demo" class="button">Estadísticas</a> <!-- Botón que abre el modal -->
                     </div>
                 </article>
                 <article class="card">
@@ -49,7 +47,7 @@
                             gubernamentales hasta las científicas, pasando por las Empresariales e Industriales,
                             entienden que los datos constituyen uno de sus principales activos...
                         </p>
-                        <a href="#modal-demo" class="button">Abrir modal</a>
+                        <a href="#modal-demo" class="button">Estadísticas</a>
                     </div>
                 </article>
                 <article class="card">
@@ -59,7 +57,7 @@
                         <p class="card__text">Uno de los grandes objetivos de esta carrera es Desarrollar nuevos
                             productos y servicios a partir del conocimiento de frontera resultante de la investigación
                             en las dimensiones a nanoescala </p>
-                        <a href="#modal-demo" class="button">Abrir modal</a>
+                        <a href="#modal-demo" class="button">Estadísticas</a>
                     </div>
                 </article>
                 <article class="card">
@@ -70,7 +68,7 @@
                             conocimientos en ciencias de la computación, programación y estructuras de datos, ingeniería
                             del software y paradigmas de programación...
                         </p>
-                        <a href="#modal-demo" class="button">Abrir modal</a>
+                        <a href="#modal-demo" class="button">Estadísticas</a>
                     </div>
                 </article>
                 <article class="card">
@@ -81,7 +79,7 @@
                             posee sólidos conocimientos en ciencias de la computación, programación y estructuras de
                             datos, ingeniería del software y paradigmas de programación...
                         </p>
-                        <a href="#modal-demo" class="button">Abrir modal</a>
+                        <a href="#modal-demo" class="button">Estadísticas</a>
                     </div>
                 </article>
             </div>
