--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <article class="card">
                     <img src="https://picsum.photos/id/11/480/240" alt="Imagen Lorem picsum" class="card__img" />
                     <div class="card__body">
-                        <h3 class="card__title">Lic. en Ciencia de Datos</h3>
+                        <h3 class="card__title">Género 3</h3>
                         <p class="card__text">Estamos transitando una época donde todas las Organizaciones, desde las
                             gubernamentales hasta las científicas, pasando por las Empresariales e Industriales,
                             entienden que los datos constituyen uno de sus principales activos...
@@ -53,7 +53,7 @@
                 <article class="card">
                     <img src="https://picsum.photos/id/12/480/240" alt="Imagen Lorem picsum" class="card__img" />
                     <div class="card__body">
-                        <h3 class="card__title">Licenciatura en Nanotecnología</h3>
+                        <h3 class="card__title">Genero 2</h3>
                         <p class="card__text">Uno de los grandes objetivos de esta carrera es Desarrollar nuevos
                             productos y servicios a partir del conocimiento de frontera resultante de la investigación
                             en las dimensiones a nanoescala </p>
